test/scc/decl/semantic-errors/064.a
064.t:1:17: error: incomplete type is not allowed